--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-202.3KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-417.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-1.40MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-251.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-248.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇨🇳 中国-268.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-457.5KB/s(Youtube:不良林), server: 120.233.29.189, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇻🇳 越南-575.5KB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-203.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-226.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇻🇳 越南-191.2KB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-931.0KB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
   - {name: 🇨🇳 中国-395.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-490.2KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-284.6KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-575.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-191.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-931.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-575.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-191.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-931.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-575.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-191.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-931.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-575.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-191.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-931.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-575.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-191.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-931.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-575.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-191.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-931.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-202.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-248.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-575.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-191.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-931.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-490.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-275.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
