--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-457.5KB/s(Youtube:不良林), server: 120.233.29.189, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇻🇳 越南-860.8KB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-226.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-395.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-3.42MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
   - {name: 🇨🇳 中国-203.3KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇻🇳 越南-6.34MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-860.8KB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇨🇳 中国-200.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-277.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-983.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-457.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-860.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
