--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-6.34MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-983.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-200.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-284.6KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇭🇰 (已存活5天)香港-307.0KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇦🇺 澳大利亚-926.0KB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇭🇰 香港-1.01MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-254.5KB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-890.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 未知国家-1.28MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇨🇳 中国-190.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-265.2KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-195.7KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-277.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-232.0KB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇸🇬 新加坡-573.1KB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-610.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
+  - {name: 🇨🇳 中国-385.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-307.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-926.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.8KB/s(Youtube:不良林)
-      - 未知国家-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-573.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-307.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-926.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.8KB/s(Youtube:不良林)
-      - 未知国家-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-573.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-307.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-926.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.8KB/s(Youtube:不良林)
-      - 未知国家-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-573.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活5天)香港-307.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-307.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-926.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.8KB/s(Youtube:不良林)
-      - 未知国家-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-573.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-307.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-926.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.8KB/s(Youtube:不良林)
-      - 未知国家-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-573.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-307.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-926.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.8KB/s(Youtube:不良林)
-      - 未知国家-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-573.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-307.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-926.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-890.8KB/s(Youtube:不良林)
-      - 未知国家-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-573.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
